kubernetes/namespaces/tooling/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: tooling
spec:
  ports:
    - name: http
      port: 8080
    - name: https
      port: 8443
  selector:
    app: keycloak
